# molmcp

./: CHANGELOG.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  release.yml
apps/molmcp-gateway/: README.md  pyproject.toml
apps/molmcp-gateway/src/molmcp_gateway/: __init__.py  cli.py  config.py  server.py
apps/molmcp-gateway/tests/: test_mount.py
deploy/hf-space/: Dockerfile  README.md
docs/: index.md
docs/concepts/: architecture.md  middleware.md  provider-design.md  providers.md
docs/get-started/: deploy.md  installation.md  quickstart.md
docs/guides/: expose-a-package.md  write-a-provider.md
docs/reference/: cli.md
src/molmcp/: __init__.py  cli.py  server.py
src/molmcp/introspection/: __init__.py  modules.py  source.py
src/molmcp/middleware/: annotations_validator.py  response_limit.py
src/molmcp/providers/: __init__.py
src/molmcp/providers/lammps/: __init__.py
src/molmcp/providers/lammps/_dev/: __init__.py
src/molmcp/providers/lammps/lammps_internal/: __init__.py  _generated_slugs.py  parser.py  workflows.py
src/molmcp/providers/lammps/lammps_internal/howto/: debug.py  equilibration.py  errors.py  forcefield.py  (+4 more)
src/molmcp/providers/molexp/: __init__.py  provider.py
src/molmcp/providers/molpack/: __init__.py  provider.py
src/molmcp/providers/molpy/: __init__.py  provider.py
src/molmcp/providers/molq/: __init__.py  provider.py
tests/fixture_pkg/: __init__.py
tests/providers/: test_lammps.py  test_molexp.py  test_molpack.py  test_molpy.py  test_molq.py
tests/test_introspection/: test_tools.py
